# uav-in-802.11-gnuradio

./: LICENSE  README.md
examples/: wifi_loopback.grc  wifi_loopback.py  wifi_phy_hier.grc  wifi_transceiver.grc  wifi_transceiver.py
grc/: CMakeLists.txt  ieee802_11_alamouti_decode_cc.block.yml  ieee802_11_alamouti_encode_cc.block.yml  ieee802_11_alamouti_ofdm_rx.block.yml  ieee802_11_alamouti_ofdm_tx_cc.block.yml  ieee802_11_my_strobe.block.yml  ieee802_11_ofdm_demapper.block.yml  ieee802_11_ofdm_insert_preamble_tagged.block.yml  ieee802_11_ofdm_mapper.block.yml  ieee802_11_ofdm_sampler.block.yml  ieee802_11_preamble_detector.block.yml  ieee802_11_uav_system.block.yml
lib/: CMakeLists.txt  alamouti_decode_cc_impl.cc  alamouti_decode_cc_impl.h  alamouti_encode_cc_impl.cc  alamouti_encode_cc_impl.h  alamouti_ofdm_rx_impl.cc  alamouti_ofdm_rx_impl.h  alamouti_ofdm_tx_cc_impl.cc  alamouti_ofdm_tx_cc_impl.h  my_strobe_impl.cc  my_strobe_impl.h  ofdm_demapper_impl.cc  ofdm_demapper_impl.h  ofdm_insert_preamble_tagged_impl.cc  ofdm_insert_preamble_tagged_impl.h  ofdm_mapper_impl.cc  ofdm_mapper_impl.h  ofdm_sampler_impl.cc  (+5 more)
python/bindings/: CMakeLists.txt  alamouti_decode_cc_python.cc  alamouti_encode_cc_python.cc  alamouti_ofdm_rx_python.cc  alamouti_ofdm_tx_cc_python.cc  my_strobe_python.cc  ofdm_demapper_python.cc  ofdm_insert_preamble_tagged_python.cc  ofdm_mapper_python.cc  ofdm_sampler_python.cc  preamble_detector_python.cc  python_bindings.cc  uav_system_python.cc
python/bindings/docstrings/: alamouti_decode_cc_pydoc_template.h  alamouti_encode_cc_pydoc_template.h  alamouti_ofdm_rx_pydoc_template.h  alamouti_ofdm_tx_cc_pydoc_template.h  my_strobe_pydoc_template.h  ofdm_demapper_pydoc_template.h  ofdm_insert_preamble_tagged_pydoc_template.h  ofdm_mapper_pydoc_template.h  ofdm_sampler_pydoc_template.h  preamble_detector_pydoc_template.h  uav_system_pydoc_template.h
(+12 files in other folders)
